--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -177,13 +177,14 @@ h1.logo a {
 }
 
 #exam h2 {
-  padding-bottom: 1%;
+  padding: 1% 0;
+  margin-bottom: 0;
 }
 
 .ed-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  -justify-content: center;
   margin-top: 6vh;
   /*MQ */
   width: 90vw;
@@ -199,54 +200,48 @@ h1.logo a {
 .ed-container p,
 .ed-container .education-courses {
   font-size: 1.2vw;
+  -font-size: 0.2vw;
 }
 
 .education-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  /* two equal columns */
   gap: 2vw;
-  padding: 0 3vw;
-  height: 100%;
+  padding-top: 8vw;
+  height: 50%;
+  margin-top: 0;
+  -align-items: center;
+  align-items: stretch;
 }
+
 
 .education-item-1,
 .education-item-2 {
-  margin-bottom: 1vw;
-  padding: 1vw;
-    border-radius: 1vw;
+  height: auto;
+  border-radius: 1vw;
+  
 }
 
 .education-item-1 {
   display: flex;
   justify-content: center;
-  /* centers horizontally */
   align-items: center;
-  /* centers vertically */
-  height: 100%;
-  /* ensures it fills the height of the grid */
-  -text-align: center;
-  /* centers text inside the p tag */
+  height: 50%;
+  margin-left: 3vw;
 }
 
 .education-item-2 img.problem9-image {
   width: 100%;
-  max-height: 100%;
+  max-height: 140%;
   object-fit: contain;
-  /* ensures full image is visible, not cropped */
-  border-radius: 1vw;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .education-item-2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-height: 100%;
+  max-height: 50%;
 }
-
-
-
 
 /* END -- EXAM */
 
