--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -436,7 +436,6 @@ h1.logo a {
 
 .contact-container {
   width: 100%;
-  -height: 86vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -476,6 +475,16 @@ h1.logo a {
   background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
   pointer-events: none;
 }
+
+  #resource-pre a {
+    cursor: var(--cursor-pointer);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.4vw;
+    font-weight: 400;
+  }
+  #resource-pre a:hover {
+     text-decoration: underline;
+  }
 
 
 
